# midiserv

./: .gitignore  Cargo.toml  cert.pem  key.pem  todo.txt  update_frontend.sh
crate_midiloc/: Cargo.toml
crate_midiloc/src/: exposed_devices.rs  main.rs
crate_midiloc/ui/: app-window.slint
crate_midiserv/: Cargo.toml
crate_midiserv/src/: main.rs
crate_midiserv/static/: index.html
crate_midiserve/: Cargo.toml  README.md
crate_midiserve/src/: main.rs
frontend/: index.html  package-lock.json  package.json  update_frontend.sh
frontend/src/: App.tsx  types.d.ts
frontend/src/controls/: KnobControl.tsx
local/: Cargo.toml  README.md
local/src/: exposed_state.rs  main.rs  midi.rs  setters.rs
local/src/tasks/: device_task.rs  login_task.rs  logout_task.rs  midi_task.rs  mod.rs  setup_task.rs
local/ui/: app-window.slint
local/ui/components/: forms.slint  indicators.slint  menu-item.slint
server/: Cargo.toml
server/src/: main.rs
util/: Cargo.toml
util/src/: exposed_devices.rs  lib.rs  midi.rs
