[package]
name = "local"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
clipboard = "0.5.0"
csv = "1.3.1"
flume = "0.11.1"
futures = "0.3.31"
futures-util = "0.3.31"
reqwest = { version = "0.12.9", features = ["blocking", "json", "rustls-tls"] }
serde = {version = "1.0.215", features = ["derive"]}
serde_json = "1.0.133"
slint = "1.8.0"
thiserror = "2.0.4"
tokio = { version = "1.42.0", features = ["full"] }
tokio-tungstenite = "0.24.0"
util = { path="../util" }

[build-dependencies]
slint-build = "1.8.0"
