[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["ws", "tokio"] }
axum-limit = "0.1.0-alpha.2"
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
dotenv = "0.15.0"
ring = "0.17.8"
rustls = "0.23.20"
serde = "1.0.215"
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["full"] }
tokio-rustls = "0.26.1"
tokio-tungstenite = "0.24.0"
tower = { version = "0.5.2", features = ["limit"] }
tower-http = { version = "0.6.2", features = ["cors", "fs"] }
util = { path="../util" }
